# rembrandt

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.beads/: ATTACH_ARCHITECTURE_HANDOFF.md  PTY_REFACTOR_HANDOFF.md  issues.jsonl
.pq/: config.json  nodes.jsonl
.pq/decisions/: PQ-bfj.md  PQ-gve.md  PQ-kwg.md  PQ-nim.md
docs/: MVP.md  SYNTHESIS-MVP.md  TAURI_MIGRATION_PLAN.md  blog-post-outline.md  competition-mode.md  gastown-analysis.md  issue-triage.md  libghostty-research.md  rembrandt-plan.md  rembrandt-v2-spec.md  sandbox-research-riff-2025-01-28.md
docs/openprose/: openprose-rembrandt-parallel.prose
gui/: index.html  package-lock.json  package.json
gui/src/: App.svelte  app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: beads.rs  buffer.rs  lib.rs  main.rs  manager.rs  session.rs  worktree.rs
gui/src/lib/: AgentCard.svelte  KanbanBoard.svelte  Terminal.svelte
src/: config.rs  lib.rs  main.rs
src/agent/: mod.rs  registry.rs
src/cli/: mod.rs
src/competition/: evaluator.rs  manager.rs  mod.rs  validator.rs
src/daemon/: buffer.rs  ipc.rs  logger.rs  manager.rs  mod.rs  session.rs
src/integration/: agent_mail.rs  beads.rs  mod.rs  porque.rs
src/isolation/: mod.rs
src/orchestrator/: mod.rs
src/runtime/: mod.rs  pi.rs
src/state/: mod.rs
src/tui/: app.rs  attach.rs  events.rs  mod.rs  render.rs
src/worktree/: mod.rs
