[package]
name = "rembrandt-gui"
version = "0.1.0"
description = "Rembrandt Agent Orchestration GUI"
authors = ["Dave Graham"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "rembrandt_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
